# tablemax

./: Architecture.md  README.md  build_log.txt  index.html  package-lock.json  package.json  skills-lock.json  tsc-errors.txt  vcvars_path.txt  vite.config.ts
core/: CMakeLists.txt
core/include/: engine.h  plugin_interface.h
core/src/: connection_manager.cpp  logger.cpp  plugin_loader.cpp  query_engine.cpp  result_stream.cpp  schema_loader.cpp
plugins/mongodb/: CMakeLists.txt  mongo_plugin.cpp
plugins/mysql/: CMakeLists.txt  mysql_plugin.cpp  mysql_plugin.h
plugins/postgres/: CMakeLists.txt  postgres_plugin.cpp
plugins/redis/: CMakeLists.txt  redis_plugin.cpp
plugins/sqlite/: CMakeLists.txt  sqlite_plugin.cpp
scripts/: build-core.bat
shared/types/: connection.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: cpp_bridge.rs  mod.rs
src-tauri/src/commands/: connection.rs  mod.rs  mongodb.rs  query.rs
src/app/layout/: AppLayout.tsx  Sidebar.tsx
src/components/icons/: database-icons.tsx
src/components/ui/: color-picker.tsx  select.tsx
src/features/connection/: ConnectionForm.tsx  ConnectionList.tsx  connectionStore.ts
src/features/query-editor/: QueryEditor.tsx  QueryTabs.tsx  tabStore.ts
src/features/schema-browser/: SchemaTree.tsx
src/features/table-viewer/: CellRenderer.tsx  MongoDocumentView.tsx  ResultTable.tsx  VirtualDataGrid.tsx
src/services/: tauri-api.ts
