[package]
name = "tablemax"
version = "0.1.0"
description = "TableMax - Multi-Database Desktop Client"
authors = ["you"]
edition = "2021"

[lib]
name = "tablemax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite", "mysql", "postgres"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
mongodb = "3"
futures-util = "0.3"
